# codesage

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.claude-plugin/: marketplace.json
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  links.yml  release.yml  secret-scan.yml  tests.yml
bench/: agent-tool-selection-harness.py  analyze-codesage-quality.py  analyze-codesage-usage.py  cleanup-orphan-models.sh  code-review-graph-bench-runner  codesage-bench-runner  concurrency-audit.py  extract-eval-cases.py
crates/cli/: Cargo.toml
crates/cli/src/: doctor.rs  drift.rs  lockfile.rs  main.rs  mcp.rs  util.rs
crates/embed/: Cargo.toml
crates/embed/src/: chunk.rs  config.rs  lib.rs  model.rs  reranker.rs
crates/embed/tests/: model_test.rs
crates/graph/: Cargo.toml
crates/graph/src/: git_history.rs  index.rs  lib.rs  query.rs  semantic.rs
crates/graph/src/git_history/: indexer.rs  mod.rs  risk.rs  tests_rec.rs
crates/graph/tests/: git_history_integration_test.rs  impact_test.rs  index_test.rs  risk_test.rs
crates/parser/: Cargo.toml
crates/parser/src/: detect.rs  discover.rs  extract.rs  lib.rs  parse.rs  references.rs
crates/parser/src/queries/: c.scm  c_refs.scm  cpp.scm  cpp_refs.scm  go.scm  go_refs.scm  javascript.scm  php.scm  php_refs.scm  python.scm  python_refs.scm  rust.scm  rust_refs.scm  typescript.scm  typescript_refs.scm
crates/parser/tests/: discover_test.rs  extract_test.rs
crates/parser/tests/fixtures/: sample.c  sample.cpp  sample.go  sample.js  sample.php  sample.py  sample.rs  sample.ts
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/storage/: Cargo.toml  build.rs
crates/storage/src/: db.rs  lib.rs  schema.rs
crates/storage/src/db/: git_hist.rs  mod.rs  semantic.rs  structural.rs
crates/storage/tests/: git_history_test.rs  schema_migration_test.rs
plugins/codesage-tools/.claude-plugin/: plugin.json
plugins/codesage-tools/commands/: codesage-bench.md  codesage-eval.md  codesage-onboard.md  codesage-reindex.md  codesage-reset.md
scripts/: leak-check.sh  leak-patterns.txt  release.sh  sanity-check.sh
