[workspace]
resolver = "2"
members = [
    "crates/protocol",
    "crates/parser",
    "crates/storage",
    "crates/embed",
    "crates/graph",
    "crates/cli",
]

[workspace.package]
version = "0.3.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/iliaal/codesage"

[workspace.dependencies]
codesage-protocol = { path = "crates/protocol" }
codesage-parser = { path = "crates/parser" }
codesage-storage = { path = "crates/storage" }
codesage-embed = { path = "crates/embed" }
codesage-graph = { path = "crates/graph" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tree-sitter = "0.26"
tree-sitter-php = "0.24"
tree-sitter-python = "0.25"
tree-sitter-c = "0.24"

rusqlite = { version = "0.39", features = ["bundled"] }

ignore = "0.4"
globset = "0.4"

clap = { version = "4", features = ["derive"] }

rmcp = { version = "1.4", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
schemars = "1.2"

rayon = "1.12"
anyhow = "1"
sha2 = "0.11"
hex = "0.4"
tree-sitter-rust = "0.24"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"

ort = { version = "2.0.0-rc.12", features = ["load-dynamic", "preload-dylibs"] }
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
hf-hub = "0.5"
