[package]
name = "codesage"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "codesage"
path = "src/main.rs"

[features]
default = []
cuda = ["codesage-embed/cuda"]

[dependencies]
codesage-protocol.workspace = true
codesage-parser.workspace = true
codesage-storage.workspace = true
codesage-embed.workspace = true
codesage-graph.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml = "1.1"
anyhow.workspace = true
parking_lot.workspace = true
rmcp.workspace = true
tokio.workspace = true
schemars.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile = "3"
