[package]
name = "codesage-embed"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
cuda = ["ort/cuda"]

[dependencies]
codesage-protocol.workspace = true
serde.workspace = true
anyhow.workspace = true
ort.workspace = true
tokenizers.workspace = true
hf-hub.workspace = true
tracing.workspace = true
