[package]
name = "codesage-parser"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
codesage-protocol.workspace = true
tree-sitter.workspace = true
tree-sitter-php.workspace = true
tree-sitter-python.workspace = true
tree-sitter-c.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-go.workspace = true
ignore.workspace = true
globset.workspace = true
anyhow.workspace = true
sha2.workspace = true
hex.workspace = true
streaming-iterator = "0.1"

[dev-dependencies]
tempfile = "3"
